// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader should be rendered with a message 1`] = `
<div
  className="sc-AxjAm gvZDkL"
>
  <div
    className="wrapper"
  >
    <div
      className="loader-large progress-loader-end"
    />
    <div
      className="progress-message"
    >
      test
    </div>
  </div>
</div>
`;

exports[`Loader should be rendered with given style 1`] = `
<div
  className="sc-AxjAm gvZDkL"
  style={
    Object {
      "background": "red",
    }
  }
>
  <div
    className="wrapper"
  >
    <div
      className="loader-large progress-loader-center"
    />
  </div>
</div>
`;

exports[`Loader should be rendered without message 1`] = `
<div
  className="sc-AxjAm gvZDkL"
>
  <div
    className="wrapper"
  >
    <div
      className="loader-large progress-loader-center"
    />
  </div>
</div>
`;
